k8s/ingress.local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-demo-ingress-local
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: demo.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-demo-svc
                port:
                  number: 80
